2007-01-26  Robert Jordan  <robertj@gmx.net>

	* configure.ac: Add PLATFORM_WIN32 conditional.
	* src/Makefile.ac: Use PLATFORM_WIN32 conditional for psapi, iconv
	* test/module.c, test/tests.h, test/Makefile.am: New test for gmodule.
	* src/gmodule.h: Add G_MODULE_{IMPORT|EXPORT} defines.
	* src/gmodule.c (g_module_symbol): Implement in-proc symbol lookup
	for Win32.
	* src/gmodule.c: Add GModule.main_module, consider it in
	g_module_close ().
	* src/gpath.c (g_get_home_dir): Add dummy Win32 implementation to
	fix the build.

2006-11-03  Miguel de Icaza  <miguel@novell.com>

	* src/gpath.c (g_path_get_dirname): If the pathname starts with a
	"/", return the "/".

	* test/string-util.c (test_strlcpy): Add new test.

	* src/gunicode.c (g_filename_from_utf8): g_strlcpy needs the full
	size, with the extra zero at the end;  Fixes the stack trace
	issue. 

2006-10-30  Miguel de Icaza  <miguel@novell.com>

	* test/utf8.c (test_utf8_seq): Add new failing test.

2006-10-30  Atsushi Enomoto  <atsushi@ximian.com>

	* src/gutf8.c : several fixes:
	  - fixed incorrect mb_size clear and mb_remain computation.
	  - initialize items_written to 0 for error case.
	  - in utf8_to_utf16_len differentiate error messages completely.
	  - in g_utf8_to_utf16 use guchar instead of gchar.
	* test/utf8.c : added test case string in test_utf8_seq() to
	  both test_utf8_to_utf16() and test_utf16_to_utf8().

2006-10-21  Miguel de Icaza  <miguel@novell.com>

	* src/gunicode.c (g_filename_from_utf8): Use g_strlcpy here. 

	* src/gmarkup.c (g_markup_parse_context_parse): Do not dereference
	null values here.   This gets things a little bit further in
	corlib, but not too far.

	* src/gdir.c (g_dir_read_name): Do not return . or ..

	* src/gstr.c (g_ascii_xdigit_value): Make this into a function,
	thanks to Paolo for pointing the problem with the double macro
	expansion. 

	* src/gmodule.c (g_module_open): Actually return NULL if we fail